--- a/s3_website.yml
+++ b/s3_website.yml
@@ -2,5 +2,4 @@ s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_KEY'] %>
 s3_endpoint: ap-south-1
 s3_bucket: jnan.co
-content_type:
-  "*.myextension": application/my-custom-type
+content_type: text/html
