Changed Author Image
Changed Image

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ jnan:
   url_full: https://jdnayak.com/
   url: www.jdnayak.com
   bio: Yet to be decded.
-  picture: assets/images/ghost.png
+  picture: assets/images/jnan.jpg
   facebook: jnanadarshan
   twitter: jnanadarshan
   cover: assets/images/hannah-cover.jpg
