--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ facebook: jnanadarshan # replace by your username
 
 # Disqus
 disqus: true
-disqus_shortname: jnanadarshan # replace with your disqus username
+disqus_shortname: jnan.co # replace with your disqus username
 
 # Google Analytics
 google_analytics: UA-91757997-1 # replace with your GA tracking identifier
