--- a/s3_website.yml
+++ b/s3_website.yml
@@ -2,4 +2,5 @@ s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_KEY'] %>
 s3_endpoint: ap-south-1
 s3_bucket: jnan.co
+skip_cleanup: true
 #Content_type: text/html
