--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ branch: master
 relative_source: ../jasper2/
 destination: _site
 production_url:  https://jnan.co
-source_url:  https://github.com/jnanadarshan/jasper2/
+source_url:  https://github.com/jnanadarshan/jnancoprod/
 
 exclude:
   - README.md
@@ -84,3 +84,9 @@ exclude:
   - "*.Rmd"
   - vendor
   - .travis.yml
+  - s3_website.yml
+  - [cflog]
+  - [amp]
+keep_files:
+  - [cflog]
+  - [amp]
