--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
 production_url: https://jnan.co
-source_url: https://github.com/jnanadarshan/jasper2/
+source_url: https://github.com/jnanadarshan/jnancoprod
 
 # Social info
 navigation: True # show the navbar links
-subscribers: True # you need to connect an external service for this to work,
+subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
 twitter: jnanadarshan # replace by your username
@@ -85,8 +85,8 @@ exclude:
   - vendor
   - .travis.yml
   - s3_website.yml
-  - cflog
-  - amp
-keep_files:
-  - cflog
-  - amp
+#  - cflog
+#  - amp
+#keep_files:
+#  - cflog
+#  - amp
