--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ paginate: 10 # it will paginate after this number
 language: 'en-uk'
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: '/'
+baseurl: /
+url: https://jnan.co/ # the base hostname & protocol for your site
 
 # Website info
 title: Jnanadarshan Nayak | Blog
