--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
 install:
   # Install Jekyll and dependencies
   - bundle install
+  - gem update --system
   - gem install jekyll
   - gem install s3_website
 script: bundle exec jekyll build
