--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: https://jnan.co # the base hostname & protocol for your site
 
 # Website info
 title: Jnanadarshan Nayak | Blog
-description: Consultant, Marketer, Technology Enthusiast. Social and Digital.
+description: Semiconductors, Digital Transformation & Sustainability.
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
