--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 # config.yml
 
 backend:
-  name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  name: github
+  repo: jnanadarshan/jnancoprod # Branch to update (optional; defaults to master)
 media_folder: 'assets/uploads'
 collections:
   - name: 'blog'
